# CADIS-SROA-Orchestrator

./: .gitignore  README.md  datos_para_chat.txt  extraer_datos_para_articulo.py  pyproject.toml
cadis_sroa_rep2/: __init__.py  agents.py  argumentation.py  cli.py  convertir_para_ai.py  design.py  excelio.py  metrics.py  pipeline.py  protocol.py  proyecto_completo_para_analizar.txt  reputation.py  simulation.py  sroa.py  utils.py
tests/: conftest.py  test_compare_runs.py  test_grounded.py
tools/: build_analisis_final_v3.py  build_analisis_final_v4.py
