[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadis-sroa-rep2"
version = "0.6.0"
description = "CADIS SROA prototype: Dung grounded vs Dung+Reputation (hybrid) on adversarial synthetic scenarios with paper-ready Excel outputs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Omar Portilla Jaimes", email="jorge.portilla2@unipamplona.edu.co"}]
dependencies = ["numpy>=1.24", "openpyxl>=3.1"]

[project.scripts]
cadis-sroa2 = "cadis_sroa_rep2.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cadis_sroa_rep2*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
